[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Main.gd" type="Script" id=2]
[ext_resource path="res://actors/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -3, 0, 0, 0, 0, 480, -1, 0, 0, 0, 0, 480, 717, 0, 0, 0, 0, 0, 719, 0, 0, 0, 0, 0, -3 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Enemy = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.219608, 0.403922, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="initTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pointsTimer" type="Timer" parent="."]

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="initPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="enemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnEnemy" type="PathFollow2D" parent="enemyPath"]
position = Vector2( 0, -3 )
rotation = 0.00416671

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="deadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="hit" from="Player" to="." method="gameOver"]
[connection signal="timeout" from="initTimer" to="." method="_on_initTimer_timeout"]
[connection signal="timeout" from="pointsTimer" to="." method="_on_pointsTimer_timeout"]
[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
[connection signal="startGame" from="HUD" to="." method="newGame"]
